<resources>
    <string name="app_name">NewsDaily</string>

    <string-array name="news_categories">
        <item>Technology</item>
        <item>Business</item>
        <item>Entertainment</item>
        <item>Health</item>
        <item>Sports</item>
    </string-array>

    <string name="spinner_prompt">Select Categories</string>
    <string name="general_news">General News</string>
    <string name="technology_news">Technology News</string>
    <string name="science_news">Science News</string>
    <string name="business_news">Business News</string>
    <string name="health_news">Health News</string>
    <string name="sports_news">Sports News</string>
    <string name="entertainment_news">Entertainment News</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="share">SHARE</string>
</resources>
