<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        app:title="News Categories"
        app:popupTheme="@style/PopupTheme"
        android:theme="@style/ToolbarTheme"/>

    <ScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ly_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/card_general"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_general"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="24dp"
                            android:src="@drawable/icon_general" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_general"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_general"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="32dp"
                            android:text="@string/general_news"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/card_tech"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_tech"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="24dp"
                            android:src="@drawable/icon_tech" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_tech"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_tech"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="32dp"
                            android:text="@string/technology_news"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ly_one"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/card_science"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_science"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="24dp"
                            android:src="@drawable/icon_brain" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_science"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_science"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="32dp"
                            android:text="@string/science_news"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/card_business"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_business"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="24dp"
                            android:src="@drawable/icon_business" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_business"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_business"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="32dp"
                            android:text="@string/business_news"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ly_two"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/card_health"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_health"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="24dp"
                            android:src="@drawable/icon_health" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_health"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_health"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="32dp"
                            android:text="@string/health_news"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/card_sports"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_sports"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="24dp"
                            android:src="@drawable/icon_sports" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_sports"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_sports"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="32dp"
                            android:text="@string/sports_news"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ly_three"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/card_entertain"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_entertain"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="24dp"
                            android:src="@drawable/icon_entertain" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_entertain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_entertain"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="32dp"
                            android:text="@string/entertainment_news"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/card_coming"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_coming"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="32dp"
                            android:text="@string/coming_soon"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>



</RelativeLayout>
